--- a/css/main.css
+++ b/css/main.css
@@ -59,10 +59,14 @@ body {
     #container #skateboarders .item:after {
       content: "";
       position: absolute;
-      background: rgba(0, 0, 0, 0.3);
+      background: rgba(0, 0, 0, 0.7);
       top: 0;
       bottom: 0;
       left: 0;
-      right: 0; }
+      right: 0;
+      transition: background 1s; }
+    #container #skateboarders .item:hover:after {
+      transition: background 1s;
+      background: transparent; }
 
 /*# sourceMappingURL=main.css.map */
