--- a/css/main.scss
+++ b/css/main.scss
@@ -61,7 +61,7 @@ body {
       border:2px solid white;
       background-color:white;
       position:relative;
-      background:url("../images/sk8er-1.png")
+      background:url("../images/sk8er-1.png");
     }
     .item:nth-child(3) {
       margin-right:0;
@@ -76,11 +76,17 @@ body {
     .item:after {
       content:"";
       position:absolute;
-      background:rgba(0,0,0,.3);
+      background:rgba(0,0,0,.7);
       top:0;
       bottom:0;
       left:0;
       right:0;
+      transition:background 1s;
+    }
+
+    .item:hover:after {
+      transition:background 1s;
+      background:transparent;
     }
   }
 }
